# koru-desktop

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/: COMUNIDAD_FEATURES.md  COMUNIDAD_Y_VISION.md  INMERSION_IDEAS.md  REGISTRO_APP.md  RELEASE_v0.17.0.md  RESEARCH_HOBOLEAKS.md  RESEARCH_MAPA_INTEL.md  REVISION_2026-07-02.md  ROADMAP.md  SCOPES.md  SPEC.md
docs/esi/: esi-endpoints.md  esi-endpoints.snapshot.json
public/: agents.json  bp_industry.json  bp_tree.json  character_titles.json  dungeon_names.json  industry_rigs.json  jumpships.json  market_groups.json  market_types.json  module_slots.json  neweden.json  npc_corp_systems.json  ores.json  pi_p0_planets.json  pi_schematics.json  ship_names.json  ships.json  skill_names.json  skill_reqs.json  system-factions.json  type_names_es.json
public/fonts/: LEEME-FUENTE.md
scripts/: build_pi_p0_planets.py  capture-esi-spec.mjs  extract_bp_tree.py  extract_industry_rigs.py  extract_industry_sde.py  find_medal_textures.py
src/: App.css  App.tsx  ErrorBoundary.tsx  abyssalRuns.tsx  actividad.tsx  ansiblex.ts  ansiblexControl.tsx  assets.tsx  bitacora.tsx  cazador.tsx  changelog.ts  charts.tsx  comercio.tsx  constants.ts  contactos.tsx  diario.tsx  exploration.tsx  explorationLog.tsx  fit.tsx  format.ts  freelance.tsx  gamelogControl.tsx  i18n.ts  industry.tsx  intel.ts  jumpCalc.ts  lealtad.tsx  logis.tsx  lootPaste.ts  lootPasteModal.tsx  main.tsx  map.tsx  mapOverlays.tsx  mapRoute.ts  medalArt.tsx  medalsControl.tsx  neweden.ts  personaje.tsx  planetologia.tsx  pve.tsx  (+18 more)
src-tauri/: 2  Cargo.toml  npc_bounty.json  ore_aliases.json  ore_data.json  rat_aliases.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: chatlog.rs  commands.rs  config.rs  error.rs  gamelog.rs  lib.rs  main.rs  medals.rs
src-tauri/src/db/: bitacora.rs  mod.rs  reprocess.json  schema.sql
src-tauri/src/esi/: assets.rs  character.rs  industry.rs  killmails.rs  market.rs  mod.rs  skills.rs  wallet.rs
src-tauri/src/sso/: callback.rs  jwt.rs  metadata.rs  mod.rs  pkce.rs  store.rs  token.rs
